--- a/.travis.yml
+++ b/.travis.yml
@@ -6,5 +6,6 @@ python:
   - "3.6"
 install:
   - pip install -r requirements.txt
+  - pip install unittest2
 script:
-  - pytest
+  - python -m unittest
