* added dependencies to travis config

--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,9 @@ python:
   - "3.4"
   - "3.5"
   - "3.6"
+before_install:
+  - sudo apt-get install libav-tools
+  - sudo apt-get install opus-tools
 install:
   - pip install -r requirements.txt
   - pip install unittest2
